force-app/main/default/objects/VoiceCall/fields/Voice_Call_Reason__c.field-meta.xml
<CustomField>
    <fullName>Voice_Call_Reason__c</fullName>
    <label>Voice Call Reason</label>
    <type>TextArea</type>
</CustomField>